add tianjin 201404, nanjing 201404, huangshan 201407

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ pre code {
     <span id="globe" style="margin-top: 10px; float: right;"> </span>
 </h1>
 
-<p>自 2009.07 起的 <strong>23 段独立策划背包旅程</strong>中，铁路 25366km，公路 2803km，航空 3774km，自驾 906km，航运 726km，骑行 255km，总背包旅行路程超过 <strong>33837km</strong>，相当于上海到杭州路程的 167.51 倍，相当于地球赤道的 0.84 倍。</p>
+<p>自 2009.07 起的 <strong>26 段独立策划背包旅程</strong>中，铁路 28407km，公路 2992km，航空 5119km，自驾 906km，航运 726km，骑行 255km，总背包旅行路程超过 <strong>38412km</strong>，相当于地球赤道的 0.96 倍。</p>
 
 <p>截至目前的最佳旅行: 穿越 5 省 11 市的独自骑行台湾成年之旅 (<a href="#featured">August '13</a>)</p>
 
@@ -222,11 +222,11 @@ pre code {
 
 <h3>乘降过的站点</h3>
 
-<p>按照第一次到达顺序排列，共计 60 个铁路车站，12 个航空站，4 个港口。</p>
+<p>按照第一次到达顺序排列，共计 68 个铁路车站，14 个航空站，4 个港口。</p>
 
-<p><strong>铁路车站</strong>: <abbr title="-CSQ">长沙站</abbr>、<abbr title="-GZQ">广州站</abbr>、<abbr title="-MMZ">茂名站</abbr>、<abbr title="-BXP">北京西站</abbr>、<abbr title="-ZVQ">肇庆站</abbr>、<abbr title="-SZQ">深圳站</abbr>、<abbr title="-ZZF">郑州站</abbr>、<abbr title="-CDW">成都站</abbr>、<abbr title="-YAK">烟台站</abbr>、<abbr title="-JNK">济南站</abbr>、<abbr title="-SNH">上海南站</abbr>、<abbr title="-HZH">杭州站</abbr>、<abbr title="-JSH">嘉善站</abbr>、<abbr title="-AOH">上海虹桥站</abbr>、<abbr title="-ICW">成都东站</abbr>、<abbr title="-IZQ">广州南站</abbr>、<abbr title="-ZIQ">珠海北站</abbr>、<abbr title="-CWQ">长沙南站</abbr>、<abbr title="-QDK">青岛站</abbr>、<abbr title="-SHH">上海站</abbr>、<abbr title="-SZH">苏州站</abbr>、<abbr title="-NCG">南昌站</abbr>、<abbr title="-JXH">嘉兴站</abbr>、<abbr title="-HGH">杭州东站</abbr>、<abbr title="-IOQ">深圳北站</abbr>、<abbr title="TRA-100">台北车站</abbr>、<abbr title="TRA-051">花莲车站</abbr>、<abbr title="TRA-004">台东车站</abbr>、<abbr title="TRA-203">枋寮车站</abbr>、<abbr title="TRA-185">高雄车站</abbr>、<abbr title="TRA-097">南港车站</abbr>、<abbr title="TRA-288">新左营车站</abbr>、<abbr title="-FZS">福州站</abbr>、<abbr title="-ZZQ">株洲站</abbr>、<abbr title="-WCN">武昌站</abbr>、<abbr title="-ZAQ">株洲西站</abbr>、<abbr title="-WHN">武汉站</abbr>、<abbr title="-NKH">南京南站</abbr>、<abbr title="-OHH">苏州北站</abbr>、<abbr title="-BGH">金山卫站</abbr>、<abbr title="-WXH">无锡站</abbr>、<abbr title="-NVH">宁波东站</abbr>、<abbr title="-FHH">奉化站</abbr>、<abbr title="-REH">金山园区站</abbr>、<abbr title="-TVH">亭林站</abbr>、<abbr title="-YOH">叶榭站</abbr>、<abbr title="-MIH">车墩站</abbr>、<abbr title="-XQH">新桥站</abbr>、<abbr title="-CSA">春申站</abbr>、<abbr title="-SXH">上海西站</abbr>、<abbr title="-HKH">黄山站</abbr>、<abbr title="-OVH">歙县站</abbr>、<abbr title="-TYV">太原站</abbr>、<abbr title="-PYV">平遥站</abbr>、<abbr title="-SJP">石家庄站</abbr>、<abbr title="-LZJ">兰州站</abbr>、<abbr title="-XXO">西宁西站</abbr>、<abbr title="-XAY">西安站</abbr>、<abbr title="-SYQ">邵阳站</abbr>、<abbr title="-NJH">南京站</abbr></p>
+<p><strong>铁路车站</strong>: <abbr title="-CSQ">长沙站</abbr>、<abbr title="-GZQ">广州站</abbr>、<abbr title="-MMZ">茂名站</abbr>、<abbr title="-BXP">北京西站</abbr>、<abbr title="-ZVQ">肇庆站</abbr>、<abbr title="-SZQ">深圳站</abbr>、<abbr title="-ZZF">郑州站</abbr>、<abbr title="-CDW">成都站</abbr>、<abbr title="-YAK">烟台站</abbr>、<abbr title="-JNK">济南站</abbr>、<abbr title="-SNH">上海南站</abbr>、<abbr title="-HZH">杭州站</abbr>、<abbr title="-JSH">嘉善站</abbr>、<abbr title="-AOH">上海虹桥站</abbr>、<abbr title="-ICW">成都东站</abbr>、<abbr title="-IZQ">广州南站</abbr>、<abbr title="-ZIQ">珠海北站</abbr>、<abbr title="-CWQ">长沙南站</abbr>、<abbr title="-QDK">青岛站</abbr>、<abbr title="-SHH">上海站</abbr>、<abbr title="-SZH">苏州站</abbr>、<abbr title="-NCG">南昌站</abbr>、<abbr title="-JXH">嘉兴站</abbr>、<abbr title="-HGH">杭州东站</abbr>、<abbr title="-IOQ">深圳北站</abbr>、<abbr title="TRA-100">台北车站</abbr>、<abbr title="TRA-051">花莲车站</abbr>、<abbr title="TRA-004">台东车站</abbr>、<abbr title="TRA-203">枋寮车站</abbr>、<abbr title="TRA-185">高雄车站</abbr>、<abbr title="TRA-097">南港车站</abbr>、<abbr title="TRA-288">新左营车站</abbr>、<abbr title="-FZS">福州站</abbr>、<abbr title="-ZZQ">株洲站</abbr>、<abbr title="-WCN">武昌站</abbr>、<abbr title="-ZAQ">株洲西站</abbr>、<abbr title="-WHN">武汉站</abbr>、<abbr title="-NKH">南京南站</abbr>、<abbr title="-OHH">苏州北站</abbr>、<abbr title="-BGH">金山卫站</abbr>、<abbr title="-WXH">无锡站</abbr>、<abbr title="-NVH">宁波东站</abbr>、<abbr title="-FHH">奉化站</abbr>、<abbr title="-REH">金山园区站</abbr>、<abbr title="-TVH">亭林站</abbr>、<abbr title="-YOH">叶榭站</abbr>、<abbr title="-MIH">车墩站</abbr>、<abbr title="-XQH">新桥站</abbr>、<abbr title="-CSA">春申站</abbr>、<abbr title="-SXH">上海西站</abbr>、<abbr title="-HKH">黄山站</abbr>、<abbr title="-OVH">歙县站</abbr>、<abbr title="-TYV">太原站</abbr>、<abbr title="-PYV">平遥站</abbr>、<abbr title="-SJP">石家庄站</abbr>、<abbr title="-LZJ">兰州站</abbr>、<abbr title="-XXO">西宁西站</abbr>、<abbr title="-XAY">西安站</abbr>、<abbr title="-SYQ">邵阳站</abbr>、<abbr title="-NJH">南京站</abbr>、<abbr title="-VNH">中华门站</abbr>、<abbr title="-BJP">北京站</abbr>、<abbr title="-QHP">清华园站</abbr>、<abbr title="-VAP">北京北站</abbr>、<abbr title="-VNP">北京南站</abbr>、<abbr title="-TXP">天津西站</abbr>、<abbr title="-TJP">天津站</abbr>、<abbr title="-HCP">黄村站</abbr></p>
 
-<p><strong>航空站</strong>: <abbr title="CSX/ZGHA">长沙黄花机场</abbr>、<abbr title="SYX/ZJSY">三亚凤凰机场</abbr>、<abbr title="TAO/ZSQD">青岛流亭机场</abbr>、<abbr title="TNA/ZSJN">济南遥墙机场</abbr>、<abbr title="PVG/ZSPD">上海浦东机场</abbr>、<abbr title="SHA/ZSSS">上海虹桥机场</abbr>、<abbr title="SZX/ZGSZ">深圳宝安机场</abbr>、<abbr title="TPE/RCTP">台北桃园机场</abbr>、<abbr title="KHH/RCKH">高雄小港机场</abbr>、<abbr title="FOC/ZSFZ">福州长乐机场</abbr>、<abbr title="LHW/ZLLL">兰州中川机场</abbr>、<abbr title="XIY/ZLXY">西安咸阳机场</abbr></p>
+<p><strong>航空站</strong>: <abbr title="CSX/ZGHA">长沙黄花机场</abbr>、<abbr title="SYX/ZJSY">三亚凤凰机场</abbr>、<abbr title="TAO/ZSQD">青岛流亭机场</abbr>、<abbr title="TNA/ZSJN">济南遥墙机场</abbr>、<abbr title="PVG/ZSPD">上海浦东机场</abbr>、<abbr title="SHA/ZSSS">上海虹桥机场</abbr>、<abbr title="SZX/ZGSZ">深圳宝安机场</abbr>、<abbr title="TPE/RCTP">台北桃园机场</abbr>、<abbr title="KHH/RCKH">高雄小港机场</abbr>、<abbr title="FOC/ZSFZ">福州长乐机场</abbr>、<abbr title="LHW/ZLLL">兰州中川机场</abbr>、<abbr title="XIY/ZLXY">西安咸阳机场</abbr>、<abbr title="TSN/ZBTJ">天津滨海机场</abbr>、<abbr title="TXN/ZSTX">黄山屯溪机场</abbr></p>
 
 <p><strong>港口</strong>: 重庆朝天门码头、宜昌港九码头、台东富冈港、绿岛南寮港</p>
 
@@ -236,9 +236,9 @@ pre code {
 
 <h3>到达过的城市级行政区</h3>
 
-<p>广州市、茂名市、北京市、佛山市、肇庆市、深圳市、郑州市、三亚市、成都市、乐山市、重庆市、宜昌市、青岛市、烟台市、济南市、上海市、杭州市、嘉兴市、桂林市、珠海市、澳门特别行政区、苏州市、南昌市、黄山市、香港特别行政区、桃园县、台北市、花莲县、台东县、屏东县、高雄市、福州市、武汉市、南京市、无锡市、宁波市、太原市、晋中市、石家庄市、兰州市、西宁市、海南藏族自治州、西安市、咸阳市</p>
+<p>广州市、茂名市、北京市、佛山市、肇庆市、深圳市、郑州市、三亚市、成都市、乐山市、重庆市、宜昌市、青岛市、烟台市、济南市、上海市、杭州市、嘉兴市、桂林市、珠海市、澳门特别行政区、苏州市、南昌市、黄山市、香港特别行政区、桃园县、台北市、花莲县、台东县、屏东县、高雄市、福州市、武汉市、南京市、无锡市、宁波市、太原市、晋中市、石家庄市、兰州市、西宁市、海南藏族自治州、西安市、咸阳市、天津市</p>
 
-<p>共计 53 个</p>
+<p>共计 54 个</p>
 
 <p>（含非背包旅行，按第一次到达时间顺序排列，不计算市辖县等第三级行政区；湖南省全境 14 个地州市中除郴州市、怀化市、娄底市、益阳市以及张家界市以外均到达过，但到达时间与顺序已不可考，故不列明细）</p>
 
@@ -266,9 +266,9 @@ pre code {
 </tr>
 <tr>
 <td>天津市</td>
-<td>未到达</td>
-<td>/</td>
-<td>/</td>
+<td>2014.04</td>
+<td>天津西站</td>
+<td>自北京出发铁路</td>
 </tr>
 <tr>
 <td>河北省</td>
@@ -569,15 +569,25 @@ pre code {
 
 <p>江苏省: 南京市</p>
 
+<h6>天津 (April '14):</h6>
+
+<p>北京市</p>
+
+<p>天津市</p>
+
+<h6>南京 (April '14):</h6>
+
+<p>江苏省: 南京市</p>
+
+<h6>黄山 (July '14):</h6>
+
+<p>安徽省: 黄山市</p>
+
 <hr />
 
 <h3>接下来的计划</h3>
 
 <p>双休或单日的江浙沪皖周边系列、中长途的城市旅行系列、长途骑行或搭车系列</p>
-
-<h6>天津 (April '14):</h6>
-
-<p>天津市、北京市</p>
 
 <h6>东北线 (planned):</h6>
 
@@ -1018,7 +1028,7 @@ if(document.body.clientWidth < 450) {
 
 <p><a href="http://cnphil.com/">Phil Xiaojun Hu</a></p>
 
-<p><i>Last updated: Mon Mar 31 11:33:11 UTC 2014</i></p>
+<p><i>Last updated: Sun Jul 13 09:07:19 UTC 2014</i></p>
 
 <script src="bubbles.js"></script> 
 <script>
