--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <span id="globe" style="margin-top: 10px; float: right;"> </span>
 </h1>
 
-<p>自 2009.07 起的 <strong>29 段独立策划背包旅程</strong>中，铁路 30941km，公路 3064km，航空 5119km，自驾 906km，航运 726km，骑行 255km，总背包旅行路程超过 <strong>41018km</strong>，相当于地球赤道的 1.02 倍。</p>
+<p>自 2009.07 起的 <strong>30 段独立策划背包旅程</strong>（中国）中，铁路 32877km，航空 5119km，公路 3064km，自驾 906km，航运 726km，骑行 255km，其他 7km，共计 <strong>42954km</strong>。</p>
 
 <p>截至目前的最佳旅行: 穿越 5 省 11 市的独自骑行台湾成年之旅 (<a href="#featured">August '13</a>)</p>
 
@@ -142,9 +142,9 @@
 
 <h3>乘降过的站点</h3>
 
-<p>按照第一次到达顺序排列，共计 73 个铁路车站，14 个航空站，4 个港口。</p>
+<p>按照第一次到达顺序排列，共计 77 个铁路车站，14 个航空站，4 个港口。</p>
 
-<p><strong>铁路车站</strong>: <abbr title="-CSQ">长沙站</abbr>、<abbr title="-GZQ">广州站</abbr>、<abbr title="-MMZ">茂名站</abbr>、<abbr title="-BXP">北京西站</abbr>、<abbr title="-ZVQ">肇庆站</abbr>、<abbr title="-SZQ">深圳站</abbr>、<abbr title="-ZZF">郑州站</abbr>、<abbr title="-CDW">成都站</abbr>、<abbr title="-YAK">烟台站</abbr>、<abbr title="-JNK">济南站</abbr>、<abbr title="-SNH">上海南站</abbr>、<abbr title="-HZH">杭州站</abbr>、<abbr title="-JSH">嘉善站</abbr>、<abbr title="-AOH">上海虹桥站</abbr>、<abbr title="-ICW">成都东站</abbr>、<abbr title="-IZQ">广州南站</abbr>、<abbr title="-ZIQ">珠海北站</abbr>、<abbr title="-CWQ">长沙南站</abbr>、<abbr title="-QDK">青岛站</abbr>、<abbr title="-SHH">上海站</abbr>、<abbr title="-SZH">苏州站</abbr>、<abbr title="-NCG">南昌站</abbr>、<abbr title="-JXH">嘉兴站</abbr>、<abbr title="-HGH">杭州东站</abbr>、<abbr title="-IOQ">深圳北站</abbr>、<abbr title="TRA-100">台北车站</abbr>、<abbr title="TRA-051">花莲车站</abbr>、<abbr title="TRA-004">台东车站</abbr>、<abbr title="TRA-203">枋寮车站</abbr>、<abbr title="TRA-185">高雄车站</abbr>、<abbr title="TRA-097">南港车站</abbr>、<abbr title="TRA-288">新左营车站</abbr>、<abbr title="-FZS">福州站</abbr>、<abbr title="-ZZQ">株洲站</abbr>、<abbr title="-WCN">武昌站</abbr>、<abbr title="-ZAQ">株洲西站</abbr>、<abbr title="-WHN">武汉站</abbr>、<abbr title="-NKH">南京南站</abbr>、<abbr title="-OHH">苏州北站</abbr>、<abbr title="-BGH">金山卫站</abbr>、<abbr title="-WXH">无锡站</abbr>、<abbr title="-NVH">宁波东站</abbr>、<abbr title="-FHH">奉化站</abbr>、<abbr title="-REH">金山园区站</abbr>、<abbr title="-TVH">亭林站</abbr>、<abbr title="-YOH">叶榭站</abbr>、<abbr title="-MIH">车墩站</abbr>、<abbr title="-XQH">新桥站</abbr>、<abbr title="-CSA">春申站</abbr>、<abbr title="-SXH">上海西站</abbr>、<abbr title="-HKH">黄山站</abbr>、<abbr title="-OVH">歙县站</abbr>、<abbr title="-TYV">太原站</abbr>、<abbr title="-PYV">平遥站</abbr>、<abbr title="-SJP">石家庄站</abbr>、<abbr title="-LZJ">兰州站</abbr>、<abbr title="-XXO">西宁西站</abbr>、<abbr title="-XAY">西安站</abbr>、<abbr title="-SYQ">邵阳站</abbr>、<abbr title="-NJH">南京站</abbr>、<abbr title="-VNH">中华门站</abbr>、<abbr title="-BJP">北京站</abbr>、<abbr title="-QHP">清华园站</abbr>、<abbr title="-VAP">北京北站</abbr>、<abbr title="-VNP">北京南站</abbr>、<abbr title="-TXP">天津西站</abbr>、<abbr title="-TJP">天津站</abbr>、<abbr title="-HCP">黄村站</abbr>、<abbr title="-TIP">天津南站</abbr>、<abbr title="-JJG">九江站</abbr>、<abbr title="-HKN">汉口站</abbr>、<abbr title="-ASH">安亭北站</abbr>、<abbr title="-ZJH">镇江站</abbr></p>
+<p><strong>铁路车站</strong>: <abbr title="-CSQ">长沙站</abbr>、<abbr title="-GZQ">广州站</abbr>、<abbr title="-MMZ">茂名站</abbr>、<abbr title="-BXP">北京西站</abbr>、<abbr title="-ZVQ">肇庆站</abbr>、<abbr title="-SZQ">深圳站</abbr>、<abbr title="-ZZF">郑州站</abbr>、<abbr title="-CDW">成都站</abbr>、<abbr title="-YAK">烟台站</abbr>、<abbr title="-JNK">济南站</abbr>、<abbr title="-SNH">上海南站</abbr>、<abbr title="-HZH">杭州站</abbr>、<abbr title="-JSH">嘉善站</abbr>、<abbr title="-AOH">上海虹桥站</abbr>、<abbr title="-ICW">成都东站</abbr>、<abbr title="-IZQ">广州南站</abbr>、<abbr title="-ZIQ">珠海北站</abbr>、<abbr title="-CWQ">长沙南站</abbr>、<abbr title="-QDK">青岛站</abbr>、<abbr title="-SHH">上海站</abbr>、<abbr title="-SZH">苏州站</abbr>、<abbr title="-NCG">南昌站</abbr>、<abbr title="-JXH">嘉兴站</abbr>、<abbr title="-HGH">杭州东站</abbr>、<abbr title="-IOQ">深圳北站</abbr>、<abbr title="TRA-100">台北车站</abbr>、<abbr title="TRA-051">花莲车站</abbr>、<abbr title="TRA-004">台东车站</abbr>、<abbr title="TRA-203">枋寮车站</abbr>、<abbr title="TRA-185">高雄车站</abbr>、<abbr title="TRA-097">南港车站</abbr>、<abbr title="TRA-288">新左营车站</abbr>、<abbr title="-FZS">福州站</abbr>、<abbr title="-ZZQ">株洲站</abbr>、<abbr title="-WCN">武昌站</abbr>、<abbr title="-ZAQ">株洲西站</abbr>、<abbr title="-WHN">武汉站</abbr>、<abbr title="-NKH">南京南站</abbr>、<abbr title="-OHH">苏州北站</abbr>、<abbr title="-BGH">金山卫站</abbr>、<abbr title="-WXH">无锡站</abbr>、<abbr title="-NVH">宁波东站</abbr>、<abbr title="-FHH">奉化站</abbr>、<abbr title="-REH">金山园区站</abbr>、<abbr title="-TVH">亭林站</abbr>、<abbr title="-YOH">叶榭站</abbr>、<abbr title="-MIH">车墩站</abbr>、<abbr title="-XQH">新桥站</abbr>、<abbr title="-CSA">春申站</abbr>、<abbr title="-SXH">上海西站</abbr>、<abbr title="-HKH">黄山站</abbr>、<abbr title="-OVH">歙县站</abbr>、<abbr title="-TYV">太原站</abbr>、<abbr title="-PYV">平遥站</abbr>、<abbr title="-SJP">石家庄站</abbr>、<abbr title="-LZJ">兰州站</abbr>、<abbr title="-XXO">西宁西站</abbr>、<abbr title="-XAY">西安站</abbr>、<abbr title="-SYQ">邵阳站</abbr>、<abbr title="-NJH">南京站</abbr>、<abbr title="-VNH">中华门站</abbr>、<abbr title="-BJP">北京站</abbr>、<abbr title="-QHP">清华园站</abbr>、<abbr title="-VAP">北京北站</abbr>、<abbr title="-VNP">北京南站</abbr>、<abbr title="-TXP">天津西站</abbr>、<abbr title="-TJP">天津站</abbr>、<abbr title="-HCP">黄村站</abbr>、<abbr title="-TIP">天津南站</abbr>、<abbr title="-JJG">九江站</abbr>、<abbr title="-HKN">汉口站</abbr>、<abbr title="-ASH">安亭北站</abbr>、<abbr title="-ZJH">镇江站</abbr>、<abbr title="-GIW">贵阳站</abbr>、<abbr title="-GBW">贵阳北站</abbr>、<abbr title="-GBQ">广州北站</abbr>、<abbr title="-FCQ">肇庆东站</abbr></p>
 
 <p><strong>航空站</strong>: <abbr title="CSX/ZGHA">长沙黄花机场</abbr>、<abbr title="SYX/ZJSY">三亚凤凰机场</abbr>、<abbr title="TAO/ZSQD">青岛流亭机场</abbr>、<abbr title="TNA/ZSJN">济南遥墙机场</abbr>、<abbr title="PVG/ZSPD">上海浦东机场</abbr>、<abbr title="SHA/ZSSS">上海虹桥机场</abbr>、<abbr title="SZX/ZGSZ">深圳宝安机场</abbr>、<abbr title="TPE/RCTP">台北桃园机场</abbr>、<abbr title="KHH/RCKH">高雄小港机场</abbr>、<abbr title="FOC/ZSFZ">福州长乐机场</abbr>、<abbr title="LHW/ZLLL">兰州中川机场</abbr>、<abbr title="XIY/ZLXY">西安咸阳机场</abbr>、<abbr title="TSN/ZBTJ">天津滨海机场</abbr>、<abbr title="TXN/ZSTX">黄山屯溪机场</abbr></p>
 
@@ -154,19 +154,19 @@
 
 <hr />
 
-<h3>到达过的城市级行政区</h3>
+<h3>到达过的地级行政区</h3>
 
-<p>广州市、茂名市、北京市、佛山市、肇庆市、深圳市、郑州市、三亚市、成都市、乐山市、重庆市、宜昌市、青岛市、烟台市、济南市、上海市、杭州市、嘉兴市、桂林市、珠海市、澳门特别行政区、苏州市、南昌市、黄山市、香港特别行政区、桃园县、台北市、花莲县、台东县、屏东县、高雄市、福州市、武汉市、南京市、无锡市、宁波市、太原市、晋中市、石家庄市、兰州市、西宁市、海南藏族自治州、西安市、咸阳市、天津市、九江市、镇江市</p>
+<p>广州市、茂名市、北京市、佛山市、肇庆市、深圳市、郑州市、三亚市、成都市、乐山市、重庆市、宜昌市、青岛市、烟台市、济南市、上海市、杭州市、嘉兴市、桂林市、珠海市、澳门特别行政区、苏州市、南昌市、黄山市、香港特别行政区、桃园县、台北市、花莲县、台东县、屏东县、高雄市、福州市、武汉市、南京市、无锡市、宁波市、太原市、晋中市、石家庄市、兰州市、西宁市、海南藏族自治州、西安市、咸阳市、天津市、九江市、镇江市、贵阳市</p>
 
-<p>共计 56 个</p>
+<p>共计 57 个</p>
 
-<p>（含非背包旅行，按第一次到达时间顺序排列，不计算市辖县等第三级行政区；湖南省全境 14 个地州市中除郴州市、怀化市、娄底市、益阳市以及张家界市以外均到达过，但到达时间与顺序已不可考，故不列明细）</p>
+<p>（按第一次到达时间顺序排列，特区、直辖市以及台湾省辖县市比照地级行政区计算；湖南省全境 14 个地州市中除郴州市、怀化市、娄底市、益阳市以及张家界市以外均到达过，但到达时间与顺序已不可考，故不列明细）</p>
 
 <hr />
 
 <h3>省份的第一次到达</h3>
 
-<p>（按照 2014 年现行中华人民共和国行政区划；台湾全境暂列为一省）</p>
+<p>（按照 2015 年现行中华人民共和国行政区划；台湾全境暂列为一省）</p>
 
 <table>
 <thead>
@@ -318,9 +318,9 @@
 </tr>
 <tr>
 <td>贵州省</td>
-<td>未到达</td>
-<td>/</td>
-<td>/</td>
+<td>2015.02</td>
+<td>贵阳站</td>
+<td>自株洲出发铁路</td>
 </tr>
 <tr>
 <td>云南省</td>
@@ -389,7 +389,7 @@
 
 <h3>逐次背包旅行</h3>
 
-<p>共计 29 段背包旅行，不含非自助旅行、因公出行以及湖南、上海境内的短途旅行。</p>
+<p>共计 30 段背包旅行，不含非自助旅行、因公出行以及湖南、上海境内的短途旅行。</p>
 
 <h6>成都-峨眉山-三峡 (July '09):</h6>
 
@@ -516,6 +516,12 @@
 <h6>南京 (November '14):</h6>
 
 <p>江苏省: 南京市、镇江市</p>
+
+<h6>贵阳 (February '15):</h6>
+
+<p>贵州省: 贵阳市</p>
+
+<p>广东省: 广州市、佛山市、肇庆市</p>
 
 <hr />
 
@@ -779,6 +785,11 @@
 <td>太原公交 IC 卡</td>
 <td>1</td>
 </tr>
+<tr>
+<td>广州</td>
+<td>岭南通・羊城通</td>
+<td>1</td>
+</tr>
 </tbody>
 </table>
 
@@ -962,7 +973,7 @@ if(document.body.clientWidth < 450) {
 
 <p><a href="http://cnphil.com/">Phil Xiaojun Hu</a></p>
 
-<p><i>Last updated: Wed Jan 28 08:37:05 UTC 2015</i></p>
+<p><i>Last updated: Mon Feb  9 08:43:15 UTC 2015</i></p>
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
