--- a/index.html
+++ b/index.html
@@ -134,21 +134,21 @@
     <span id="globe" style="margin-top: 10px; float: right;"> </span>
 </h1>
 
-<p>自 2009.07 起的 <strong>31 段独立策划背包旅程</strong>（中国）中，铁路 33503 km，航空 5119 km，公路 3099 km，自驾 906 km，航运 726 km，骑行 255 km，其他 7 km，共计 <strong>43615 km</strong>。</p>
+<p>自 2009.07 起的 <strong>36 段旅程</strong>（中国）中，铁路 47265 km，航空 5932 km，公路 3099 km，自驾 906 km，航运 726 km，骑行 255 km，其他 7 km，共计 <strong>58190 km</strong>。</p>
 
-<p>截至目前的最佳旅行: 穿越 5 省 11 市的独自骑行台湾成年之旅 (<a href="#featured">August '13</a>)</p>
+<p>最佳旅行: 穿越 5 省 11 市的独自骑行台湾成年之旅 (<a href="#featured">August 2013</a>)</p>
 
 <div class="highbox">
 
 <h3>乘降过的站点</h3>
 
-<p>按照第一次到达顺序排列，共计 80 个铁路车站，14 个航空站，4 个港口。</p>
+<p>按照第一次到达顺序排列，共计 96 个铁路车站，14 个航空站，6 个港口。</p>
 
-<p><strong>铁路车站</strong>: <abbr title="-CSQ">长沙站</abbr>、<abbr title="-GZQ">广州站</abbr>、<abbr title="-MMZ">茂名站</abbr>、<abbr title="-BXP">北京西站</abbr>、<abbr title="-ZVQ">肇庆站</abbr>、<abbr title="-SZQ">深圳站</abbr>、<abbr title="-ZZF">郑州站</abbr>、<abbr title="-CDW">成都站</abbr>、<abbr title="-YAK">烟台站</abbr>、<abbr title="-JNK">济南站</abbr>、<abbr title="-SNH">上海南站</abbr>、<abbr title="-HZH">杭州站</abbr>、<abbr title="-JSH">嘉善站</abbr>、<abbr title="-AOH">上海虹桥站</abbr>、<abbr title="-ICW">成都东站</abbr>、<abbr title="-IZQ">广州南站</abbr>、<abbr title="-ZIQ">珠海北站</abbr>、<abbr title="-CWQ">长沙南站</abbr>、<abbr title="-QDK">青岛站</abbr>、<abbr title="-SHH">上海站</abbr>、<abbr title="-SZH">苏州站</abbr>、<abbr title="-NCG">南昌站</abbr>、<abbr title="-JXH">嘉兴站</abbr>、<abbr title="-HGH">杭州东站</abbr>、<abbr title="-IOQ">深圳北站</abbr>、<abbr title="TRA-100">台北车站</abbr>、<abbr title="TRA-051">花莲车站</abbr>、<abbr title="TRA-004">台东车站</abbr>、<abbr title="TRA-203">枋寮车站</abbr>、<abbr title="TRA-185">高雄车站</abbr>、<abbr title="TRA-097">南港车站</abbr>、<abbr title="TRA-288">新左营车站</abbr>、<abbr title="-FZS">福州站</abbr>、<abbr title="-ZZQ">株洲站</abbr>、<abbr title="-WCN">武昌站</abbr>、<abbr title="-ZAQ">株洲西站</abbr>、<abbr title="-WHN">武汉站</abbr>、<abbr title="-NKH">南京南站</abbr>、<abbr title="-OHH">苏州北站</abbr>、<abbr title="-BGH">金山卫站</abbr>、<abbr title="-WXH">无锡站</abbr>、<abbr title="-NVH">宁波东站</abbr>、<abbr title="-FHH">奉化站</abbr>、<abbr title="-REH">金山园区站</abbr>、<abbr title="-TVH">亭林站</abbr>、<abbr title="-YOH">叶榭站</abbr>、<abbr title="-MIH">车墩站</abbr>、<abbr title="-XQH">新桥站</abbr>、<abbr title="-CSA">春申站</abbr>、<abbr title="-SXH">上海西站</abbr>、<abbr title="-HKH">黄山站</abbr>、<abbr title="-OVH">歙县站</abbr>、<abbr title="-TYV">太原站</abbr>、<abbr title="-PYV">平遥站</abbr>、<abbr title="-SJP">石家庄站</abbr>、<abbr title="-LZJ">兰州站</abbr>、<abbr title="-XXO">西宁西站</abbr>、<abbr title="-XAY">西安站</abbr>、<abbr title="-SYQ">邵阳站</abbr>、<abbr title="-NJH">南京站</abbr>、<abbr title="-VNH">中华门站</abbr>、<abbr title="-BJP">北京站</abbr>、<abbr title="-QHP">清华园站</abbr>、<abbr title="-VAP">北京北站</abbr>、<abbr title="-VNP">北京南站</abbr>、<abbr title="-TXP">天津西站</abbr>、<abbr title="-TJP">天津站</abbr>、<abbr title="-HCP">黄村站</abbr>、<abbr title="-TIP">天津南站</abbr>、<abbr title="-JJG">九江站</abbr>、<abbr title="-HKN">汉口站</abbr>、<abbr title="-ASH">安亭北站</abbr>、<abbr title="-ZJH">镇江站</abbr>、<abbr title="-GIW">贵阳站</abbr>、<abbr title="-GBW">贵阳北站</abbr>、<abbr title="-GBQ">广州北站</abbr>、<abbr title="-FCQ">肇庆东站</abbr>、<abbr title="-UCH">芦潮港站</abbr>、<abbr title="-ZEH">镇江南站</abbr>、<abbr title="-YLH">扬州站</abbr></p>
+<p><strong>铁路车站</strong>: <abbr title="-CSQ">长沙站</abbr>、<abbr title="-GZQ">广州站</abbr>、<abbr title="-MMZ">茂名站</abbr>、<abbr title="-BXP">北京西站</abbr>、<abbr title="-ZVQ">肇庆站</abbr>、<abbr title="-SZQ">深圳站</abbr>、<abbr title="-ZZF">郑州站</abbr>、<abbr title="-CDW">成都站</abbr>、<abbr title="-YAK">烟台站</abbr>、<abbr title="-JNK">济南站</abbr>、<abbr title="-SNH">上海南站</abbr>、<abbr title="-HZH">杭州站</abbr>、<abbr title="-JSH">嘉善站</abbr>、<abbr title="-AOH">上海虹桥站</abbr>、<abbr title="-ICW">成都东站</abbr>、<abbr title="-IZQ">广州南站</abbr>、<abbr title="-ZIQ">珠海北站</abbr>、<abbr title="-CWQ">长沙南站</abbr>、<abbr title="-QDK">青岛站</abbr>、<abbr title="-SHH">上海站</abbr>、<abbr title="-SZH">苏州站</abbr>、<abbr title="-NCG">南昌站</abbr>、<abbr title="-JXH">嘉兴站</abbr>、<abbr title="-HGH">杭州东站</abbr>、<abbr title="-IOQ">深圳北站</abbr>、<abbr title="TRA-100">台北车站</abbr>、<abbr title="TRA-051">花莲车站</abbr>、<abbr title="TRA-004">台东车站</abbr>、<abbr title="TRA-203">枋寮车站</abbr>、<abbr title="TRA-185">高雄车站</abbr>、<abbr title="TRA-097">南港车站</abbr>、<abbr title="TRA-288">新左营车站</abbr>、<abbr title="-FZS">福州站</abbr>、<abbr title="-ZZQ">株洲站</abbr>、<abbr title="-WCN">武昌站</abbr>、<abbr title="-ZAQ">株洲西站</abbr>、<abbr title="-WHN">武汉站</abbr>、<abbr title="-NKH">南京南站</abbr>、<abbr title="-OHH">苏州北站</abbr>、<abbr title="-BGH">金山卫站</abbr>、<abbr title="-WXH">无锡站</abbr>、<abbr title="-NVH">宁波东站</abbr>、<abbr title="-FHH">奉化站</abbr>、<abbr title="-REH">金山园区站</abbr>、<abbr title="-TVH">亭林站</abbr>、<abbr title="-YOH">叶榭站</abbr>、<abbr title="-MIH">车墩站</abbr>、<abbr title="-XQH">新桥站</abbr>、<abbr title="-CSA">春申站</abbr>、<abbr title="-SXH">上海西站</abbr>、<abbr title="-HKH">黄山站</abbr>、<abbr title="-OVH">歙县站</abbr>、<abbr title="-TYV">太原站</abbr>、<abbr title="-PYV">平遥站</abbr>、<abbr title="-SJP">石家庄站</abbr>、<abbr title="-LZJ">兰州站</abbr>、<abbr title="-XXO">西宁西站</abbr>、<abbr title="-XAY">西安站</abbr>、<abbr title="-SYQ">邵阳站</abbr>、<abbr title="-NJH">南京站</abbr>、<abbr title="-VNH">中华门站</abbr>、<abbr title="-BJP">北京站</abbr>、<abbr title="-QHP">清华园站</abbr>、<abbr title="-VAP">北京北站</abbr>、<abbr title="-VNP">北京南站</abbr>、<abbr title="-TXP">天津西站</abbr>、<abbr title="-TJP">天津站</abbr>、<abbr title="-HCP">黄村站</abbr>、<abbr title="-TIP">天津南站</abbr>、<abbr title="-JJG">九江站</abbr>、<abbr title="-HKN">汉口站</abbr>、<abbr title="-ASH">安亭北站</abbr>、<abbr title="-ZJH">镇江站</abbr>、<abbr title="-GIW">贵阳站</abbr>、<abbr title="-GBW">贵阳北站</abbr>、<abbr title="-GBQ">广州北站</abbr>、<abbr title="-FCQ">肇庆东站</abbr>、<abbr title="-UCH">芦潮港站</abbr>、<abbr title="-ZEH">镇江南站</abbr>、<abbr title="-YLH">扬州站</abbr>、<abbr title="-BJY">宝鸡站</abbr>、<abbr title="-OYJ">水源站</abbr>、<abbr title="-LAJ">兰州西站</abbr>、<abbr title="-XNO">西宁站</abbr>、<abbr title="-EAY">西安北站</abbr>、<abbr title="-HDY">华山北站</abbr>、<abbr title="-HSY">华山站</abbr>、<abbr title="-ZAF">郑州东站</abbr>、<abbr title="-TAK">泰山站</abbr>、<abbr title="-TMK">泰安站</abbr>、<abbr title="-JQO">九龙站</abbr>、<abbr title="-GGQ">广州东站</abbr>、<abbr title="-BOP">北京东站</abbr>、<abbr title="-AJP">燕郊站</abbr>、<abbr title="-XMS">厦门站</abbr>、<abbr title="-XKS">厦门北站</abbr></p>
 
 <p><strong>航空站</strong>: <abbr title="CSX/ZGHA">长沙黄花机场</abbr>、<abbr title="SYX/ZJSY">三亚凤凰机场</abbr>、<abbr title="TAO/ZSQD">青岛流亭机场</abbr>、<abbr title="TNA/ZSJN">济南遥墙机场</abbr>、<abbr title="PVG/ZSPD">上海浦东机场</abbr>、<abbr title="SHA/ZSSS">上海虹桥机场</abbr>、<abbr title="SZX/ZGSZ">深圳宝安机场</abbr>、<abbr title="TPE/RCTP">台北桃园机场</abbr>、<abbr title="KHH/RCKH">高雄小港机场</abbr>、<abbr title="FOC/ZSFZ">福州长乐机场</abbr>、<abbr title="LHW/ZLLL">兰州中川机场</abbr>、<abbr title="XIY/ZLXY">西安咸阳机场</abbr>、<abbr title="TSN/ZBTJ">天津滨海机场</abbr>、<abbr title="TXN/ZSTX">黄山屯溪机场</abbr></p>
 
-<p><strong>港口</strong>: 重庆朝天门码头、宜昌港九码头、台东富冈港、绿岛南寮港</p>
+<p><strong>港口</strong>: 重庆朝天门码头、宜昌港九码头、台东富冈港、绿岛南寮港、厦门厦金客运码头、厦门三丘田码头</p>
 
 </div>
 
@@ -156,11 +156,11 @@
 
 <h3>到达过的地级行政区</h3>
 
-<p>广州市、茂名市、北京市、佛山市、肇庆市、深圳市、郑州市、三亚市、成都市、乐山市、重庆市、宜昌市、青岛市、烟台市、济南市、上海市、杭州市、嘉兴市、桂林市、珠海市、澳门特别行政区、苏州市、南昌市、黄山市、香港特别行政区、桃园县、台北市、花莲县、台东县、屏东县、高雄市、福州市、武汉市、南京市、无锡市、宁波市、太原市、晋中市、石家庄市、兰州市、西宁市、海南藏族自治州、西安市、咸阳市、天津市、九江市、镇江市、贵阳市、扬州市</p>
+<p>广州市、茂名市、北京市、佛山市、肇庆市、深圳市、郑州市、三亚市、成都市、乐山市、重庆市、宜昌市、青岛市、烟台市、济南市、上海市、杭州市、嘉兴市、桂林市、珠海市、澳门特别行政区、苏州市、南昌市、黄山市、香港特别行政区、桃园县、台北市、花莲县、台东县、屏东县、高雄市、福州市、武汉市、南京市、无锡市、宁波市、太原市、晋中市、石家庄市、兰州市、西宁市、海南藏族自治州、西安市、咸阳市、天津市、九江市、镇江市、贵阳市、扬州市、宝鸡市、渭南市、泰安市、廊坊市、厦门市</p>
 
-<p>共计 58 个</p>
+<p>共计 63 个</p>
 
-<p>（按第一次到达时间顺序排列，特区、直辖市以及台湾省辖县市比照地级行政区计算；湖南省全境 14 个地州市中除郴州市、怀化市、娄底市、益阳市以及张家界市以外均到达过，但到达时间与顺序已不可考，故不列明细）</p>
+<p>（按第一次到达时间顺序排列，特区、直辖市以及台湾省辖县市比照地级行政区计算；湖南省全境 14 个地州市中除郴州市、怀化市、娄底市、益阳市以及张家界市以外均列入统计，不列明细）</p>
 
 <hr />
 
@@ -389,9 +389,9 @@
 
 <h3>逐次背包旅行</h3>
 
-<p>共计 31 段背包旅行，不含非自助旅行、因公出行以及湖南、上海境内的短途旅行。</p>
+<p>共计 36 段背包旅行，不含非自助旅行、因公出行以及湖南、上海境内的短途旅行。</p>
 
-<h6>成都-峨眉山-三峡 (July '09):</h6>
+<h6>成都-峨眉山-三峡 (July 2009):</h6>
 
 <p>四川省: 成都市、都江堰市、乐山市、峨眉山市</p>
 
@@ -399,45 +399,45 @@
 
 <p>湖北省: 宜昌市</p>
 
-<h6>西塘 (December '10):</h6>
+<h6>西塘 (December 2010):</h6>
 
 <p>浙江省: 嘉善县西塘镇</p>
 
-<h6>成都-西岭雪山 (July '11):</h6>
+<h6>成都-西岭雪山 (July 2011):</h6>
 
 <p>四川省: 成都市、邛崃市</p>
 
-<h6>澳门 (August '11):</h6>
+<h6>澳门 (August 2011):</h6>
 
 <p>广东省: 广州市、肇庆市、珠海市</p>
 
 <p>澳门特别行政区</p>
 
-<h6>青岛 (July '12):</h6>
+<h6>青岛 (July 2012):</h6>
 
 <p>山东省: 青岛市、济南市</p>
 
-<h6>苏州 (March '13, June '13, July '13, September '13):</h6>
+<h6>苏州 (March '13, June '13, July '13, September ‘13, June '15, December 2015):</h6>
 
 <p>江苏省: 苏州市</p>
 
-<h6>杭州 (March '13, July '13):</h6>
+<h6>杭州 (March '13, July 2013):</h6>
 
 <p>浙江省: 杭州市</p>
 
-<h6>南昌 (March '13):</h6>
+<h6>南昌 (March 2013):</h6>
 
 <p>江西省: 南昌市</p>
 
-<h6>嘉兴 (June '13):</h6>
+<h6>嘉兴 (June 2013):</h6>
 
 <p>浙江省: 嘉兴市</p>
 
-<h6>黄山 (July '13):</h6>
+<h6>黄山 (July 2013):</h6>
 
 <p>安徽省: 黄山市</p>
 
-<h6>骑行台湾 (August '13):</h6>
+<h6>骑行台湾 (August 2013):</h6>
 
 <p>广东省: 深圳市</p>
 
@@ -447,29 +447,29 @@
 
 <p>福建省: 福州市</p>
 
-<h6>武汉 (September '13):</h6>
+<h6>武汉 (September 2013):</h6>
 
 <p>湖北省: 武汉市</p>
 
-<h6>南京 (September '13):</h6>
+<h6>南京 (September 2013):</h6>
 
 <p>湖北省: 武汉市</p>
 
 <p>江苏省: 南京市</p>
 
-<h6>无锡-惠山 (October '13):</h6>
+<h6>无锡-惠山 (October 2013):</h6>
 
 <p>江苏省: 无锡市</p>
 
-<h6>宁波 (October '13):</h6>
+<h6>宁波 (October 2013):</h6>
 
 <p>浙江省: 宁波市、奉化市</p>
 
-<h6>黟县 (November '13):</h6>
+<h6>黟县 (November 2013):</h6>
 
 <p>安徽省: 黄山市、宏村镇</p>
 
-<h6>太原-平遥 (November '13):</h6>
+<h6>太原-平遥 (November 2013):</h6>
 
 <p>山西省: 太原市、平遥县</p>
 
@@ -477,7 +477,7 @@
 
 <p>河南省: 郑州市</p>
 
-<h6>西北 (January '14):</h6>
+<h6>西北 (January 2014):</h6>
 
 <p>甘肃省: 兰州市</p>
 
@@ -485,67 +485,73 @@
 
 <p>陕西省: 西安市、咸阳市</p>
 
-<h6>南京 (March '14):</h6>
+<h6>南京 (March 2014):</h6>
 
 <p>江苏省: 南京市</p>
 
-<h6>天津 (April '14):</h6>
+<h6>天津 (April 2014):</h6>
 
 <p>北京市</p>
 
 <p>天津市</p>
 
-<h6>南京 (April '14):</h6>
+<h6>南京 (April 2014):</h6>
 
 <p>江苏省: 南京市</p>
 
-<h6>黄山 (July '14):</h6>
+<h6>黄山 (July 2014):</h6>
 
 <p>安徽省: 黄山市</p>
 
-<h6>九江 (August '14):</h6>
+<h6>九江 (August 2014):</h6>
 
 <p>江西省: 九江市</p>
 
 <p>湖北省: 武汉市</p>
 
-<h6>苏州 (November '14):</h6>
+<h6>苏州 (November 2014):</h6>
 
 <p>江苏省: 苏州市</p>
 
-<h6>南京 (November '14):</h6>
+<h6>南京 (November 2014):</h6>
 
 <p>江苏省: 南京市、镇江市</p>
 
-<h6>贵阳 (February '15):</h6>
+<h6>贵阳 (February 2015):</h6>
 
 <p>贵州省: 贵阳市</p>
 
 <p>广东省: 广州市、佛山市、肇庆市</p>
 
-<h6>扬州 (April '15):</h6>
+<h6>扬州 (April 2015):</h6>
 
 <p>江苏省: 镇江市、扬州市、南京市</p>
 
-<hr />
+<h6>毕业环线 (July 2015):</h6>
 
-<h3>接下来的计划</h3>
+<p>上海-湖南-陕西-甘肃-青海-河南-山东-上海-浙江-上海-江苏-上海-香港-广东-湖南</p>
 
-<p>双休或单日的江浙沪皖周边系列、中长途的城市旅行系列、长途骑行或搭车系列</p>
+<p>陕西省: 西安市、宝鸡市、渭南市（华山）</p>
 
-<h6>东北线 (planned):</h6>
+<p>甘肃省: 兰州市</p>
 
-<p>大连、哈尔滨、漠河（北极村）、呼伦贝尔（满洲里、呼伦湖）</p>
+<p>青海省: 西宁市</p>
 
-<p>路线: 上海-北京、北京-(廊坊)-天津、天津-大连、大连-沈阳-长春-哈尔滨、哈尔滨-漠河、漠河-(齐齐哈尔/哈尔滨)-满洲里、满洲里-北京、北京-(太原)-银川、银川-兰州-西宁、西宁-西安、西安-长沙</p>
+<p>河南省: 郑州市</p>
 
-<h6>西藏 (planned):</h6>
+<p>山东省: 泰安市（泰山）</p>
 
-<p>尚未开始规划</p>
+<p>江苏省: 苏州市</p>
 
-<p>进出藏线路有: 青藏铁路（T264 次广州-拉萨，中国铁路运营里程最长的车次）、青藏公路（西宁-拉萨）、川藏公路（成都-拉萨，途径稻城、丽江、盐井、然乌，较青藏更不单调更适宜骑行）、中尼公路（加德满都-拉萨）</p>
+<p>浙江省: 杭州市</p>
 
-<p>目前的想法: 滇进青出（半个月）、公路骑行加都方向进藏拉萨直飞出（约一个月）</p>
+<p>香港特别行政区</p>
+
+<p>广东省: 广州市</p>
+
+<h6>厦门 (November 2015):</h6>
+
+<p>福建省: 福州市、厦门市</p>
 
 <hr />
 
@@ -794,6 +800,16 @@
 <td>岭南通・羊城通</td>
 <td>1</td>
 </tr>
+<tr>
+<td>北京</td>
+<td>北京市政交通一卡通</td>
+<td>2</td>
+</tr>
+<tr>
+<td>郑州</td>
+<td>绿城通</td>
+<td>1</td>
+</tr>
 </tbody>
 </table>
 
@@ -870,6 +886,10 @@
 <td>俄罗斯</td>
 <td>2013</td>
 </tr>
+<tr>
+<td>San Francisco</td>
+<td>2015</td>
+</tr>
 </tbody>
 </table>
 
@@ -877,7 +897,8 @@
 <hr />
 
 <h3>推荐和计划</h3>
-
+暂无
+<!--
 <h5>江浙沪皖</h5>
 
 <p>区域推荐: 苏州、皖南民居、黄山、徽杭古道、东极岛</p>
@@ -965,6 +986,7 @@
 <h5>西北</h5>
 
 <p>参考: 《Lonely Planet: 青海》</p>
+-->
 
 <script type="text/javascript">
 if(document.body.clientWidth < 450) {
@@ -975,9 +997,9 @@ if(document.body.clientWidth < 450) {
 
 <hr />
 
-<p><a href="http://cnphil.com/">Phil Xiaojun Hu</a></p>
+<p><!--<a href="http://cnphil.com/">-->Phil Xiaojun Hu<!--</a>--></p>
 
-<p><i>Last updated: Mon Apr  6 02:55:31 UTC 2015</i></p>
+<p><i>Last updated: Thu Dec 10 14:17:31 UTC 2015</i></p>
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
